# imaginarium

./: .gitignore  docker-compose-local.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_02_1516-332494f18803_first_migration.py  2024_08_03_1141-c5e038c42aca_create_review_table.py  2024_08_03_1304-bcd9bff6b435_create_profile_table.py  2024_08_05_1653-962040006d17_create_user_asoc_table.py  2024_08_05_1656-36e7de9ac14b_create_user_asoc.py  2024_08_05_1743-72d314d78285_create_user_asoc.py  2024_08_07_1923-ed358e2f9b89_ðcreate_all_tables.py
app/: main.py  test_crud.py
app/api/: __init__.py  config.py
app/api/core/: __init__.py  config.py  db_helper.py
app/api/core/books/: book_handlers.py  crud.py  dependencies.py  schemas.py  views.py
app/api/core/handlers/: user_handlers.py
app/api/core/profiles/: crud.py  views.py
app/api/core/users/: __init__.py  crud.py  dependencies.py  schemas.py  user_handlers.py  user_views.py  views.py
app/api/orm/: __init__.py  db_helper.py
app/api/orm/models/: __init__.py  base.py  book.py  profile.py  review.py  user.py  user_book_association.py
app/core/: config.py  db_helper.py
app/orm/models/: user.py
app/templates/: index.html  navbar.html
app/tests/: sandbox.py  test_user_crud.py
