[tool.poetry]
name = "bookshelf-site"
version = "0.1.0"
description = ""
authors = ["Krushovice <kickstar69@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
