[tool.poetry]
name = "bookshelf-site"
version = "0.1.0"
description = ""
authors = ["Krushovice <kickstar69@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
